# MessengerServer

./: CMakeLists - Copy.txt  CMakeLists.txt  DataBase.sql  Example.sql  Main.qml  StatusIndicator.qml  backend.cpp  backend.h  connections.cpp  connections.h  entity.cpp  entity.h  entitymodel.cpp  entitymodel.h  equipment.cpp  equipment.h  main.cpp  messengerdb + data.sql  messengerdb.sql  packetStructs.h  securesession.cpp  securesession.h  server.cpp  server.h  session.cpp  session.h  sessionStructs.h  tlscertificategenerator.cpp  tlscertificategenerator.h  version.h.in
CComponents/: IconButton.qml
